--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <title>Movie Design</title>
   </head>
   <body>
-    <div class="navbar"></div>
+    <div class="navbar">
+      <div class="navbar-container">
+        <div class="logo-container"></div>
+        <div class="menu-container"></div>
+        <div class="profile-container"></div>
+      </div>
+    </div>
     <div class="sidebar"></div>
   </body>
 </html>
