--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
           <div class="profile-text-container">
             <span class="profile-text">
               Profile
-              <i class="fa-solid fa-caret-down"></i>
+              <i class="fas fa-caret-down"></i>
             </span>
+          </div>
+          <div class="toggle">
+            <i class="fas fa-moon toogle-icon"></i>
+            <i class="fas fa-sun toogle-icon"></i>
+            <div class="toggle-ball"></div>
           </div>
         </div>
       </div>
