--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
         </div>
       </div>
     </div>
-    <div class="sidebar"></div>
+    <div class="sidebar">
+      <i class="left-menu-icon fas fa-search"></i>
+      <i class="left-menu-icon fas fa-home"></i>
+      <i class="left-menu-icon fa-solid fa-users"></i>
+      <i class="left-menu-icon fa-solid fa-bookmark"></i>
+      <i class="left-menu-icon fa-solid fa-tv"></i>
+      <i class="left-menu-icon fa-solid fa-hourglass"></i>
+      <i class="left-menu-icon fa-solid fa-cart-shopping"></i>
+    </div>
+    <div class="container">
+      dfdssdffdsfsdfdsfdsfds
+      <div class="content-container"></div>
+    </div>
   </body>
 </html>
