featured movie section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,26 @@
       <i class="left-menu-icon fa-solid fa-cart-shopping"></i>
     </div>
     <div class="container">
-      dfdssdffdsfsdfdsfdsfds
+      <div
+        class="featured-content"
+        style="
+          background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #151515),
+            url('img/f-1.jpg');
+        "
+      >
+        <img
+          src="img/f-t-1.png"
+          alt="featured picture"
+          class="featured-title"
+        />
+        <p class="featured-desc">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas
+          sunt voluptate vero quia laborum eum ea fugit voluptatem modi mollitia
+          suscipit cum expedita quibusdam, consequuntur veniam laboriosam,
+          eligendi at totam!
+        </p>
+        <button class="featured-button">WATCH</button>
+      </div>
       <div class="content-container"></div>
     </div>
   </body>
