--- a/index.html
+++ b/index.html
@@ -59,27 +59,49 @@
       <i class="left-menu-icon fa-solid fa-cart-shopping"></i>
     </div>
     <div class="container">
-      <div
-        class="featured-content"
-        style="
-          background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #151515),
-            url('img/f-1.jpg');
-        "
-      >
-        <img
-          src="img/f-t-1.png"
-          alt="featured picture"
-          class="featured-title"
-        />
-        <p class="featured-desc">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas
-          sunt voluptate vero quia laborum eum ea fugit voluptatem modi mollitia
-          suscipit cum expedita quibusdam, consequuntur veniam laboriosam,
-          eligendi at totam!
-        </p>
-        <button class="featured-button">WATCH</button>
+      <div class="content-container">
+        <div
+          class="featured-content"
+          style="
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #151515),
+              url('img/f-1.jpg');
+          "
+        >
+          <img
+            src="img/f-t-1.png"
+            alt="featured picture"
+            class="featured-title"
+          />
+          <p class="featured-desc">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas
+            sunt voluptate vero quia laborum eum ea fugit voluptatem modi
+            mollitia suscipit cum expedita quibusdam, consequuntur veniam
+            laboriosam, eligendi at totam!
+          </p>
+          <button class="featured-button">WATCH</button>
+        </div>
+        <div class="movie-list-container">
+          <h1 class="movie-list-title">NEW RELEASES</h1>
+          <div class="movie-list-wrapper">
+            <div class="movie-list">
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum nostrum est exercitationem
+                  corporis, magnam voluptatibus aperiam recusandae
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="content-container"></div>
     </div>
   </body>
 </html>
