movie slider design part2

--- a/index.html
+++ b/index.html
@@ -90,13 +90,97 @@
                   alt="movie image"
                   class="movie-list-item-image"
                 />
-                <span class="movie-list-item-title"> Her </span>
+                <!-- <span class="movie-list-item-title"> Her </span>
                 <p class="movie-list-item-desc">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Officia eos, blanditiis, ipsum nostrum est exercitationem
                   corporis, magnam voluptatibus aperiam recusandae
                 </p>
-                <button class="movie-list-item-button">Watch</button>
+                <button class="movie-list-item-button">Watch</button> -->
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <!-- <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum nostrum est exercitationem
+                  corporis, magnam voluptatibus aperiam recusandae
+                </p>
+                <button class="movie-list-item-button">Watch</button> -->
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <!-- <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum nostrum est exercitationem
+                  corporis, magnam voluptatibus aperiam recusandae
+                </p>
+                <button class="movie-list-item-button">Watch</button> -->
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <!-- <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum nostrum est exercitationem
+                  corporis, magnam voluptatibus aperiam recusandae
+                </p>
+                <button class="movie-list-item-button">Watch</button> -->
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <!-- <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum nostrum est exercitationem
+                  corporis, magnam voluptatibus aperiam recusandae
+                </p>
+                <button class="movie-list-item-button">Watch</button> -->
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <!-- <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum nostrum est exercitationem
+                  corporis, magnam voluptatibus aperiam recusandae
+                </p>
+                <button class="movie-list-item-button">Watch</button> -->
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <!-- <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum nostrum est exercitationem
+                  corporis, magnam voluptatibus aperiam recusandae
+                </p>
+                <button class="movie-list-item-button">Watch</button> -->
               </div>
             </div>
           </div>
