movie slider design part3

--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                   alt="movie image"
                   class="movie-list-item-image"
                 />
-                <!-- <span class="movie-list-item-title"> Her </span>
+                <span class="movie-list-item-title"> Her </span>
                 <p class="movie-list-item-desc">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Officia eos, blanditiis, ipsum nostrum est exercitationem
                   corporis, magnam voluptatibus aperiam recusandae
                 </p>
-                <button class="movie-list-item-button">Watch</button> -->
+                <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
@@ -104,13 +104,13 @@
                   alt="movie image"
                   class="movie-list-item-image"
                 />
-                <!-- <span class="movie-list-item-title"> Her </span>
+                <span class="movie-list-item-title"> Her </span>
                 <p class="movie-list-item-desc">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Officia eos, blanditiis, ipsum nostrum est exercitationem
                   corporis, magnam voluptatibus aperiam recusandae
                 </p>
-                <button class="movie-list-item-button">Watch</button> -->
+                <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
@@ -118,13 +118,13 @@
                   alt="movie image"
                   class="movie-list-item-image"
                 />
-                <!-- <span class="movie-list-item-title"> Her </span>
+                <span class="movie-list-item-title"> Her </span>
                 <p class="movie-list-item-desc">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Officia eos, blanditiis, ipsum nostrum est exercitationem
                   corporis, magnam voluptatibus aperiam recusandae
                 </p>
-                <button class="movie-list-item-button">Watch</button> -->
+                <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
@@ -132,13 +132,13 @@
                   alt="movie image"
                   class="movie-list-item-image"
                 />
-                <!-- <span class="movie-list-item-title"> Her </span>
+                <span class="movie-list-item-title"> Her </span>
                 <p class="movie-list-item-desc">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Officia eos, blanditiis, ipsum nostrum est exercitationem
                   corporis, magnam voluptatibus aperiam recusandae
                 </p>
-                <button class="movie-list-item-button">Watch</button> -->
+                <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
@@ -146,13 +146,13 @@
                   alt="movie image"
                   class="movie-list-item-image"
                 />
-                <!-- <span class="movie-list-item-title"> Her </span>
+                <span class="movie-list-item-title"> Her </span>
                 <p class="movie-list-item-desc">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Officia eos, blanditiis, ipsum nostrum est exercitationem
                   corporis, magnam voluptatibus aperiam recusandae
                 </p>
-                <button class="movie-list-item-button">Watch</button> -->
+                <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
@@ -160,13 +160,13 @@
                   alt="movie image"
                   class="movie-list-item-image"
                 />
-                <!-- <span class="movie-list-item-title"> Her </span>
+                <span class="movie-list-item-title"> Her </span>
                 <p class="movie-list-item-desc">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Officia eos, blanditiis, ipsum nostrum est exercitationem
                   corporis, magnam voluptatibus aperiam recusandae
                 </p>
-                <button class="movie-list-item-button">Watch</button> -->
+                <button class="movie-list-item-button">Watch</button>
               </div>
               <div class="movie-list-item">
                 <img
@@ -174,13 +174,13 @@
                   alt="movie image"
                   class="movie-list-item-image"
                 />
-                <!-- <span class="movie-list-item-title"> Her </span>
+                <span class="movie-list-item-title"> Her </span>
                 <p class="movie-list-item-desc">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Officia eos, blanditiis, ipsum nostrum est exercitationem
                   corporis, magnam voluptatibus aperiam recusandae
                 </p>
-                <button class="movie-list-item-button">Watch</button> -->
+                <button class="movie-list-item-button">Watch</button>
               </div>
             </div>
           </div>
