movie slider design part4

--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
                 <span class="movie-list-item-title"> Her </span>
                 <p class="movie-list-item-desc">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Officia eos, blanditiis, ipsum nostrum est exercitationem
-                  corporis, magnam voluptatibus aperiam recusandae
+                  Officia eos, blanditiis, ipsum
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
@@ -107,8 +106,7 @@
                 <span class="movie-list-item-title"> Her </span>
                 <p class="movie-list-item-desc">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Officia eos, blanditiis, ipsum nostrum est exercitationem
-                  corporis, magnam voluptatibus aperiam recusandae
+                  Officia eos, blanditiis, ipsum
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
@@ -121,8 +119,7 @@
                 <span class="movie-list-item-title"> Her </span>
                 <p class="movie-list-item-desc">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Officia eos, blanditiis, ipsum nostrum est exercitationem
-                  corporis, magnam voluptatibus aperiam recusandae
+                  Officia eos, blanditiis, ipsum
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
@@ -135,8 +132,7 @@
                 <span class="movie-list-item-title"> Her </span>
                 <p class="movie-list-item-desc">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Officia eos, blanditiis, ipsum nostrum est exercitationem
-                  corporis, magnam voluptatibus aperiam recusandae
+                  Officia eos, blanditiis, ipsum
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
@@ -149,8 +145,7 @@
                 <span class="movie-list-item-title"> Her </span>
                 <p class="movie-list-item-desc">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Officia eos, blanditiis, ipsum nostrum est exercitationem
-                  corporis, magnam voluptatibus aperiam recusandae
+                  Officia eos, blanditiis, ipsum
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
@@ -163,8 +158,7 @@
                 <span class="movie-list-item-title"> Her </span>
                 <p class="movie-list-item-desc">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Officia eos, blanditiis, ipsum nostrum est exercitationem
-                  corporis, magnam voluptatibus aperiam recusandae
+                  Officia eos, blanditiis, ipsum
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
@@ -177,8 +171,7 @@
                 <span class="movie-list-item-title"> Her </span>
                 <p class="movie-list-item-desc">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Officia eos, blanditiis, ipsum nostrum est exercitationem
-                  corporis, magnam voluptatibus aperiam recusandae
+                  Officia eos, blanditiis, ipsum
                 </p>
                 <button class="movie-list-item-button">Watch</button>
               </div>
