--- a/index.html
+++ b/index.html
@@ -176,6 +176,328 @@
                 <button class="movie-list-item-button">Watch</button>
               </div>
             </div>
+            <i class="fa-solid fa-arrow-right arrow"></i>
+          </div>
+        </div>
+        <div class="movie-list-container">
+          <h1 class="movie-list-title">NEW RELEASES</h1>
+          <div class="movie-list-wrapper">
+            <div class="movie-list">
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+            </div>
+            <i class="fa-solid fa-arrow-right arrow"></i>
+            <div
+              class="featured-content"
+              style="
+                background: linear-gradient(
+                    to bottom,
+                    rgba(0, 0, 0, 0),
+                    #151515
+                  ),
+                  url('img/f-2.jpg');
+              "
+            >
+              <img
+                src="img/f-t-2.png"
+                alt="featured picture"
+                class="featured-title"
+              />
+              <p class="featured-desc">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Voluptas sunt voluptate vero quia laborum eum ea fugit
+                voluptatem modi mollitia suscipit cum expedita quibusdam,
+                consequuntur veniam laboriosam, eligendi at totam!
+              </p>
+              <button class="featured-button">WATCH</button>
+            </div>
+          </div>
+        </div>
+        <div class="movie-list-container">
+          <h1 class="movie-list-title">NEW RELEASES</h1>
+          <div class="movie-list-wrapper">
+            <div class="movie-list">
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+            </div>
+            <i class="fa-solid fa-arrow-right arrow"></i>
+          </div>
+        </div>
+        <div class="movie-list-container">
+          <h1 class="movie-list-title">NEW RELEASES</h1>
+          <div class="movie-list-wrapper">
+            <div class="movie-list">
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+              <div class="movie-list-item">
+                <img
+                  src="img/1.jpeg"
+                  alt="movie image"
+                  class="movie-list-item-image"
+                />
+                <span class="movie-list-item-title"> Her </span>
+                <p class="movie-list-item-desc">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Officia eos, blanditiis, ipsum
+                </p>
+                <button class="movie-list-item-button">Watch</button>
+              </div>
+            </div>
+            <i class="fa-solid fa-arrow-right arrow"></i>
           </div>
         </div>
       </div>
