adding dark mode with js

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               </div>
               <div class="movie-list-item">
                 <img
-                  src="img/1.jpeg"
+                  src="img/2.jpeg"
                   alt="movie image"
                   class="movie-list-item-image"
                 />
@@ -112,7 +112,7 @@
               </div>
               <div class="movie-list-item">
                 <img
-                  src="img/1.jpeg"
+                  src="img/3.jpg"
                   alt="movie image"
                   class="movie-list-item-image"
                 />
@@ -125,7 +125,7 @@
               </div>
               <div class="movie-list-item">
                 <img
-                  src="img/1.jpeg"
+                  src="img/4.jpg"
                   alt="movie image"
                   class="movie-list-item-image"
                 />
@@ -138,7 +138,7 @@
               </div>
               <div class="movie-list-item">
                 <img
-                  src="img/1.jpeg"
+                  src="img/5.jpg"
                   alt="movie image"
                   class="movie-list-item-image"
                 />
@@ -151,7 +151,7 @@
               </div>
               <div class="movie-list-item">
                 <img
-                  src="img/1.jpeg"
+                  src="img/6.jpg"
                   alt="movie image"
                   class="movie-list-item-image"
                 />
@@ -164,7 +164,7 @@
               </div>
               <div class="movie-list-item">
                 <img
-                  src="img/1.jpeg"
+                  src="img/7.jpg"
                   alt="movie image"
                   class="movie-list-item-image"
                 />
